--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,62 @@
-<div>Hello world</div>
+<div class="navbar d-flex justify-content-between p-2">
+  <div class="ms-4" type="button" (click)="toggleSideNav()">
+    <mat-icon>menu</mat-icon>
+  </div>
+  <router-outlet name="navbar"></router-outlet>
+  <button mat-button [matMenuTriggerFor]="menu"><mat-icon class="icon-display">person_pin</mat-icon></button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item (click)="redirectTo('login')">Zaloguj</button>
+    <button mat-menu-item>Wyloguj</button>
+  </mat-menu>
+</div>
+<mat-sidenav-container>
+  <mat-sidenav [(opened)]="opened">
+
+    <img class="avatar mat-elevation-z8" [src]="'assets/image/author.png'" alt="dariusz_dajcz"/>
+    <h4 class="name">Dariusz Dajcz</h4>
+    <p class="designation">Angular Dev</p>
+
+    <mat-divider></mat-divider>
+
+    <button mat-button class="menu-button" (click)="redirectTo('home')">
+      <mat-icon>home</mat-icon>
+      <span>Home</span>
+    </button>
+    <button mat-button class="menu-button" (click)="redirectTo('profile')">
+      <mat-icon>person</mat-icon>
+      <span>Profile</span>
+    </button>
+    <button mat-button class="menu-button" (click)="redirectTo('info')">
+      <mat-icon>info</mat-icon>
+      <span>About</span>
+    </button>
+    <button mat-button class="menu-button" (click)="redirectTo('ngrx')">
+      <img class="icon" [src]="'assets/image/ngrx_-removebg.png'" alt="ngrx"/>
+      <span class="ngrx-span">NgRx</span>
+    </button>
+    <button mat-button class="menu-button" (click)="redirectTo('login')">
+      <mat-icon>login</mat-icon>
+      <span>Login section</span>
+    </button>
+
+    <mat-divider></mat-divider>
+
+    <button mat-button class="menu-button" (click)="redirectTo('help')">
+      <mat-icon>help</mat-icon>
+      <span>Help</span>
+    </button>
+  </mat-sidenav>
+
+  <!--   main router-outlet-->
+  <mat-sidenav-content>
+    <div class="content mat-elevation-z1">
+      <router-outlet></router-outlet>
+<!--      <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#229489" type="square-jelly-box"-->
+<!--                   [fullScreen]="true">-->
+<!--        <p style="color: #229489">-->
+<!--          Loading...-->
+<!--        </p>-->
+<!--      </ngx-spinner>-->
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
