--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
   <button mat-button [matMenuTriggerFor]="menu"><mat-icon class="icon-display">person_pin</mat-icon></button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item (click)="redirectTo('login')">Zaloguj</button>
+    <button mat-menu-item (click)="redirectTo('signup')">Rejestracja</button>
     <button mat-menu-item>Wyloguj</button>
   </mat-menu>
 </div>
