--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@ body {
   --gray: #b4b4b4;
   --light-green: #a59f83;
   --light-blue: #a19bf2;
+  --primary: #607d8b;
 }
 
 /* You can add global styles to this file, and also import other style files */
