--- a/src/app/entities/login/components/signup/signup.component.html
+++ b/src/app/entities/login/components/signup/signup.component.html
@@ -1,4 +1,5 @@
 <div class="h-100 login-background">
+<!--  <button type="submit" mat-raised-button color="primary" (click)="check()">CHECK</button>-->
   <form class="w-50 h-100 opacity-100">
     <div class="login-container">
       <mat-toolbar class="login-toolbar" color="primary">Zarejestruj konto w banku</mat-toolbar>
@@ -7,8 +8,8 @@
 
           <mat-form-field>
             <mat-icon matPrefix>person_outline</mat-icon>
-            <input autofocus type="text" matInput placeholder="Nazwa" formControlName="name">
-            <mat-error *ngIf="nameControl.hasError('required')">
+            <input autofocus type="text" matInput placeholder="Nazwa" formControlName="username">
+            <mat-error *ngIf="usernameControl.hasError('required')">
               Pole wymagane
             </mat-error>
           </mat-form-field>
@@ -23,12 +24,19 @@
 
           <mat-form-field>
             <mat-icon matPrefix>lock_outline</mat-icon>
-            <input type="password" autocomplete="false" matInput placeholder="Hasło"  formControlName="password">
+            <input type="password" autocomplete="false" matInput placeholder="Hasło" formControlName="password">
             <mat-error *ngIf="passwordControl.hasError('required')">
               Pole wymagane
             </mat-error>
           </mat-form-field>
-          <button type="submit" mat-raised-button color="primary">ZAŁÓŻ KONTO</button>
+
+          <mat-button-toggle-group class="w-100" name="fontStyle" aria-label="Font Style" formControlName="role">
+            <mat-button-toggle class="w-25" [value]="UserRoles.ROLE_USER">Klient</mat-button-toggle>
+            <mat-button-toggle  class="w-25" [value]="UserRoles.ROLE_AGENT">Agent</mat-button-toggle>
+            <mat-button-toggle  class="w-50" [value]="UserRoles.ROLE_ADMIN">Administrator</mat-button-toggle>
+          </mat-button-toggle-group>
+
+          <button class="mt-3" type="submit" mat-raised-button color="primary">ZAŁÓŻ KONTO</button>
         </form>
       </mat-card>
     </div>
