--- a/src/material-custom.scss
+++ b/src/material-custom.scss
@@ -1,5 +1,6 @@
 @use '../node_modules/@angular/material' as mat;
 @use '../node_modules/@angular/material/core/theming/palette' as palette;
+
 $my-palette: mat.$indigo-palette;
 
 @include mat.core();
@@ -55,3 +56,9 @@ $my-theme: mat.define-light-theme((
 
 @include mat.button-theme($my-theme);
 @include mat.all-component-themes($my-theme);
+
+
+.mat-button-toggle-checked {
+  background-color: var(--primary);
+  color: white!important;
+}
