--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,13 +19,13 @@
 
     <mat-divider></mat-divider>
 
-    <button mat-button class="menu-button" (click)="redirectTo('home')">
+    <button mat-button class="menu-button" (click)="redirectTo('')">
       <mat-icon>home</mat-icon>
       <span>Home</span>
     </button>
-    <button mat-button class="menu-button" (click)="redirectTo('profile')">
+    <button mat-button class="menu-button" (click)="redirectTo('client')">
       <mat-icon>person</mat-icon>
-      <span>Profile</span>
+      <span>Baza Klienta</span>
     </button>
     <button mat-button class="menu-button" (click)="redirectTo('info')">
       <mat-icon>info</mat-icon>
