--- a/src/app/entities/login/components/signup/signup.component.html
+++ b/src/app/entities/login/components/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="h-100 login-background">
 <!--  <button type="submit" mat-raised-button color="primary" (click)="check()">CHECK</button>-->
-  <form class="w-50 h-100 opacity-100">
+  <div class="w-50 h-100 opacity-100">
     <div class="login-container">
       <mat-toolbar class="login-toolbar" color="primary">Zarejestruj konto w banku</mat-toolbar>
       <mat-card class="p-3">
@@ -40,5 +40,5 @@
         </form>
       </mat-card>
     </div>
-  </form>
+  </div>
 </div>
