--- a/src/app/entities/client/client.component.html
+++ b/src/app/entities/client/client.component.html
@@ -5,5 +5,6 @@
     Dodaj Klienta
   </button>
   <app-client-table *ngIf="clients" [clients]="clients"
-                    (updateClientEmitter)="updateClient($event)"></app-client-table>
+                    (updateClientEmitter)="updateClient($event)"
+                    (deleteClientEmitter)="deleteClient($event)"></app-client-table>
 </div>
