--- a/src/app/entities/client/components/client-table/client-table.component.html
+++ b/src/app/entities/client/components/client-table/client-table.component.html
@@ -16,7 +16,7 @@
     <td>{{client.can_get_loan | canGetLoan}}</td>
     <td>
       <button class="me-3" mat-stroked-button color="primary" (click)="updateClient(client)">Edytuj</button>
-      <button class="me-3" mat-stroked-button color="accent">Usuń</button>
+      <button class="me-3" mat-stroked-button color="accent"  (click)="deleteClient(client.id)">Usuń</button>
       <button class="me-3" mat-stroked-button color="primary">Szczegóły</button>
     </td>
   </tr>
