--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
     </button>
     <button mat-button class="menu-button" (click)="redirectTo('info')">
       <mat-icon>info</mat-icon>
-      <span>About</span>
+      <span>Info</span>
     </button>
     <button mat-button class="menu-button" (click)="redirectTo('ngrx')">
       <img class="icon" [src]="'assets/image/ngrx_-removebg.png'" alt="ngrx"/>
