--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="h-100 login-background">
   <div class="home-title h-100 opacity-100 d-flex flex-column">
-    <div>WITAJ {{ 'angular-lib.title' | translate}} <span *ngIf="user" style="color: #263238">:{{user.username}}:</span> NA STRONIE GŁÓWNEJ</div>
+    <div>  <span *ngIf="user" style="color: #263238">:{{user.username}}:</span> NA STRONIE GŁÓWNEJ</div>
     <div>ROLA ==> <span *ngIf="user" style="color: #263238">{{user.role}}</span></div>
     <a *ngIf="!user" routerLink='/login'>Zaloguj się</a>
-    <button mat-raised-button (click)="click()"></button>
+    <button class="w-25"  mat-raised-button (click)="click()">Internationalization</button>
   </div>
 </div>
