--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -1,1 +1,5 @@
-<div class="angular-logo" type="button" (click)="redirectTo()"></div>
+<div class="d-flex">
+  <div class="angular-logo" (click)="redirectTo()"></div>
+  <button class="w-25" mat-raised-button color="accent" (click)="click()">{{'internationalization' | translate}}</button>
+</div>
+
