--- a/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
@@ -5,6 +5,6 @@
 <div class="modal-body pb-0">
 </div>
 <div class="modal-footer justify-content-between">
-  <button mat-stroked-button color="accent" (click)="onDismiss()">NIE</button>
+  <button mat-stroked-button color="warn" (click)="onDismiss()">NIE</button>
   <button mat-raised-button color="primary" (click)="onConfirm()">TAK</button>
 </div>
