--- a/src/app/entities/client/client.component.html
+++ b/src/app/entities/client/client.component.html
@@ -1,10 +1,11 @@
 <div class="page">
-  <h1 class="mb-4">Baza Klienta</h1>
+  <h1 class="mb-4">{{'client.header' | translate}}</h1>
   <button class="mb-2" mat-raised-button color="primary"
           (click)="updateClient()">
-    Dodaj Klienta
+    {{'client.add-client' | translate}}
   </button>
   <app-client-table *ngIf="clients" [clients]="clients"
                     (updateClientEmitter)="updateClient($event)"
-                    (deleteClientEmitter)="deleteClient($event)"></app-client-table>
+                    (deleteClientEmitter)="deleteClient($event)"
+                    (detailsClientEmitter)="detailsClient($event)"></app-client-table>
 </div>
