--- a/src/app/entities/client/components/client-table/client-table.component.html
+++ b/src/app/entities/client/components/client-table/client-table.component.html
@@ -1,11 +1,11 @@
 <table class="table table-light table-striped table-hover p-4" *ngIf="!!clients">
   <thead>
   <tr class="table-dark">
-    <th scope="col">Imie i Nazwisko</th>
-    <th scope="col">Adres</th>
-    <th scope="col">Pesel</th>
-    <th scope="col">Czy może wziąć pożyczkę</th>
-    <th scope="col">Szczegóły</th>
+    <th scope="col">{{'client.name' | translate}}</th>
+    <th scope="col">{{'client.address' | translate}}</th>
+    <th scope="col">{{'client.pesel' | translate}}</th>
+    <th scope="col">{{'client.can_get_loan' | translate}}</th>
+    <th scope="col">{{'client.details' | translate}}</th>
   </tr>
   </thead>
   <tbody>
@@ -15,9 +15,9 @@
     <td>{{client.pesel}}</td>
     <td>{{client.can_get_loan | canGetLoan}}</td>
     <td>
-      <button class="me-3" mat-stroked-button color="primary" (click)="updateClient(client)">Edytuj</button>
-      <button class="me-3" mat-stroked-button color="accent"  (click)="deleteClient(client.id)">Usuń</button>
-      <button class="me-3" mat-stroked-button color="primary">Szczegóły</button>
+      <button class="me-3" mat-stroked-button color="primary" (click)="updateClient(client)">{{'button.update' | translate}}</button>
+      <button class="me-3" mat-stroked-button color="warn" (click)="deleteClient(client.id)">{{'button.delete' | translate}}</button>
+      <button class="me-3" mat-stroked-button color="primary" (click)="detailsClient(client)">{{'button.details' | translate}}</button>
     </td>
   </tr>
 </table>
