--- a/src/app/entities/login/login.component.html
+++ b/src/app/entities/login/login.component.html
@@ -1,33 +1,34 @@
 <div class="h-100 login-background">
-    <form class="w-50 h-100 opacity-100" *ngIf="!isLoggedIn; else loggedIn">
-      <div class="login-container">
-          <mat-toolbar class="login-toolbar" color="primary">Zaloguj sie do banku</mat-toolbar>
-          <mat-card class="p-3">
-            <form class="d-flex flex-column align-items-center mb-4" [formGroup]="loginForm" (ngSubmit)="onSubmit()" >
-              <mat-form-field>
-                <mat-icon matPrefix>person_outline</mat-icon>
-                <input autofocus type="text" matInput placeholder="Login" formControlName="username">
-                <mat-error *ngIf="usernameControl.hasError('required')">
-                  Pole wymagane
-                </mat-error>
-              </mat-form-field>
-              <mat-form-field>
-                <mat-icon matPrefix>lock_outline</mat-icon>
-                <input type="password" autocomplete="false" matInput placeholder="Hasło"  formControlName="password">
-                <mat-error *ngIf="passwordControl.hasError('required')">
-                  Pole wymagane
-                </mat-error>
-              </mat-form-field>
-              <button type="submit" mat-raised-button color="primary">ZALOGUJ</button>
-            </form>
-            <span style="font-size: 15px">Jeśli nie masz jeszcze konta, zarejestruj się <a routerLink='/sign-up'>Rejestracja</a></span>
-          </mat-card>
-      </div>
-    </form>
+  <form class="w-50 h-100 opacity-100" *ngIf="!isLoggedIn; else loggedIn">
+    <div class="login-container">
+      <mat-toolbar class="login-toolbar" color="primary">{{'login.logg-header' | translate}}</mat-toolbar>
+      <mat-card class="p-3">
+        <form class="d-flex flex-column align-items-center mb-4" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+          <mat-form-field>
+            <mat-icon matPrefix>person_outline</mat-icon>
+            <input autofocus type="text" matInput placeholder="Login" formControlName="username">
+            <mat-error *ngIf="usernameControl.hasError('required')">
+              {{'form.required' | translate}}
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field>
+            <mat-icon matPrefix>lock_outline</mat-icon>
+            <input type="password" autocomplete="false" matInput placeholder="Hasło" formControlName="password">
+            <mat-error *ngIf="passwordControl.hasError('required')">
+              {{'form.required' | translate}}
+            </mat-error>
+          </mat-form-field>
+          <button class="text-uppercase" type="submit" mat-raised-button color="primary">{{'button.login' | translate}}</button>
+        </form>
+        <span style="font-size: 15px">{{'login.register-redirect' | translate}}
+          <a routerLink='/sign-up'>{{'button.register' | translate}}</a></span>
+      </mat-card>
+    </div>
+  </form>
 </div>
 
 <ng-template #loggedIn>
   <div style="color: #263238; font-size: 4rem; font-family: 'Calisto MT',serif; text-align: center">
-    ZALOGOWANY
+    {{'login.loggedIn' | translate}}
   </div>
 </ng-template>
