--- a/src/material-custom.scss
+++ b/src/material-custom.scss
@@ -39,8 +39,8 @@ $my-primary-palette: (
 );
 
 $my-primary: mat.define-palette($my-primary-palette, 500);
-$my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$my-warn: mat.define-palette(mat.$red-palette);
+$my-accent: mat.define-palette(mat.$teal-palette, 600, A100, A400);
+$my-warn: mat.define-palette(mat.$pink-palette);
 
 $my-theme: mat.define-light-theme((
   color: (
