--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@ mat-sidenav {
   margin: 15px;
   width: 200px;
   border-right: none;
-  background: #85869BFF;
+  background: var(--primary);
   color: white;
   border-radius: 15px;
   padding: 10px;
