--- a/src/app/entities/account/components/client-table/account-table.component.html
+++ b/src/app/entities/account/components/client-table/account-table.component.html
@@ -1,19 +1,23 @@
-<table class="table table-light table-striped table-hover p-4" *ngIf="!!banks">
+<table class="table table-light table-striped table-hover p-4" *ngIf="!!accounts">
   <thead>
   <tr class="table-dark">
-    <th scope="col">{{'bank.name' | translate}}</th>
-    <th scope="col">{{'bank.address' | translate}}</th>
-    <th scope="col">{{'bank.details' | translate}}</th>
+    <th scope="col">{{'account.account_number' | translate}}</th>
+    <th scope="col">{{'account.creation_date' | translate}}</th>
+    <th scope="col">{{'account.bonuses' | translate}}</th>
+    <th scope="col">{{'account.details' | translate}}</th>
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let bank of banks">
-    <th scope="row">{{bank.name}}</th>
-    <td>{{bank.address}}</td>
+  <tr *ngFor="let account of accounts">
+    <th scope="row">{{account.account_number}}</th>
+    <td>{{account.creation_date}}</td>
+    <td>{{account.bonuses | aproove}}</td>
+    <td>{{account.client_id | aproove}}</td>
+    <td>{{account.bank_id | aproove}}</td>
     <td>
-      <button class="me-3" mat-stroked-button color="primary" (click)="updateClient(bank)">{{'button.update' | translate}}</button>
-      <button class="me-3" mat-stroked-button color="warn" (click)="deleteClient(bank.id)">{{'button.delete' | translate}}</button>
-      <button class="me-3" mat-stroked-button color="primary" (click)="detailsClient(bank)">{{'button.details' | translate}}</button>
+      <button class="me-3" mat-stroked-button color="primary" (click)="updateClient(account)">{{'button.update' | translate}}</button>
+      <button class="me-3" mat-stroked-button color="warn" (click)="deleteClient(account.id)">{{'button.delete' | translate}}</button>
+      <button class="me-3" mat-stroked-button color="primary" (click)="detailsClient(account)">{{'button.details' | translate}}</button>
     </td>
   </tr>
 </table>
