--- a/src/app/entities/account/components/account-edit-modal/account-edit-modal.component.html
+++ b/src/app/entities/account/components/account-edit-modal/account-edit-modal.component.html
@@ -1,30 +1,56 @@
 <div class="modal-header">
-  <h4>{{(bankModel ? 'header.edit' : 'header.add') | translate}} {{'bank.to-bank'| translate}}</h4>
+  <h4>{{(accountModel ? 'header.edit' : 'header.add') | translate}} {{'account.to-account'| translate}}</h4>
   <button class="btn-close" type="button" (click)="onDismiss()"></button>
 </div>
 <div class="modal-body pb-0">
   <form class="pt-2 ps-5 pe-5">
     <div class="login-container">
-      <form class="d-flex flex-column align-items-center mb-4" [formGroup]="bankForm">
+      <form class="d-flex flex-column align-items-center mb-4" [formGroup]="accountForm">
         <mat-form-field>
-          <mat-label>{{'bank.name' | translate}}</mat-label>
-          <input autofocus type="text" matInput formControlName="name">
-          <mat-error *ngIf="nameControl.hasError('required')">
+          <mat-label>{{'account.account_number' | translate}}</mat-label>
+          <input autofocus type="text" matInput formControlName="account_number">
+          <mat-error *ngIf="accountNumberControl.hasError('required')">
             {{'form.required' | translate}}
           </mat-error>
         </mat-form-field>
+
         <mat-form-field>
-          <mat-label>{{'bank.address' | translate}}</mat-label>
-          <input autofocus type="text" matInput formControlName="address">
-          <mat-error *ngIf="addressControl.hasError('required')">
+          <mat-label>{{'account.creation_date' | translate}}</mat-label>
+          <input autofocus type="text" matInput formControlName="creation_date">
+          <mat-error *ngIf="creationDateControl.hasError('required')">
             {{'form.required' | translate}}
           </mat-error>
         </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>{{'account.bonuses' | translate}}</mat-label>
+          <input autofocus type="text" matInput formControlName="bonuses">
+          <mat-error *ngIf="bonusesControl.hasError('required')">
+            {{'form.required' | translate}}
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>{{'account.client_id' | translate}}</mat-label>
+          <input autofocus type="text" matInput formControlName="client_id">
+          <mat-error *ngIf="clientIdControl.hasError('required')">
+            {{'form.required' | translate}}
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>{{'account.bank_id' | translate}}</mat-label>
+          <input autofocus type="text" matInput formControlName="bank_id">
+          <mat-error *ngIf="bankIdControl.hasError('required')">
+            {{'form.required' | translate}}
+          </mat-error>
+        </mat-form-field>
+
       </form>
     </div>
   </form>
 </div>
 <div class="modal-footer justify-content-between">
   <button mat-stroked-button color="warn" (click)="onDismiss()">{{'button.cancel' | translate}}</button>
-  <button mat-raised-button color="primary" (click)="saveBank()">{{'button.save' | translate}}</button>
+  <button mat-raised-button color="primary" (click)="saveAccount()">{{'button.save' | translate}}</button>
 </div>
