--- a/src/app/entities/bank/components/bank-edit-modal/bank-edit-modal.component.scss
+++ b/src/app/entities/bank/components/bank-edit-modal/bank-edit-modal.component.scss
@@ -1,3 +1,8 @@
 .mat-mdc-form-field {
   width: 100%;
 }
+
+::ng-deep.mdc-text-field--disabled .mdc-text-field__input {
+  color: var(--primary) !important;
+  border: #90a4ae;
+}
