confrim dialog fixes

--- a/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/components/confirm-dialog/confirm-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h4>{{messageHeader}}</h4>
+  <h4>{{messageHeader | translate}}</h4>
   <button class="btn-close" type="button" (click)="onDismiss()"></button>
 </div>
 <div class="modal-body pb-0">
