--- a/src/app/entities/account/components/client-table/account-table.component.html
+++ b/src/app/entities/account/components/client-table/account-table.component.html
@@ -14,8 +14,8 @@
     <th scope="row">{{account.account_number}}</th>
     <td>{{account.creation_date}}</td>
     <td>{{account.bonuses | aproove}}</td>
-    <td>{{account.clientX.first_name}} {{account.clientX.surname}}</td>
-    <td>{{account.bankX.name}}</td>
+    <td>{{account.clientX!.first_name}} {{account.clientX!.surname}}</td>
+    <td>{{account.bankX!.name}}</td>
     <td>
       <button class="me-3" mat-stroked-button color="primary"
               (click)="updateClient(account)">{{'button.update' | translate}}</button>
