--- a/src/app/entities/account/components/client-table/account-table.component.html
+++ b/src/app/entities/account/components/client-table/account-table.component.html
@@ -1,6 +1,6 @@
 <table class="table main table-light table-striped table-hover p-4" *ngIf="!!accounts">
   <thead>
-  <tr class="table-dark">
+  <tr class="table-header">
     <th scope="col">{{'account.account_number' | translate}}</th>
     <th scope="col">{{'account.creation_date' | translate}}</th>
     <th scope="col">{{'account.bonuses' | translate}}</th>
