--- a/src/app/entities/bank/components/bank-table/bank-table.component.html
+++ b/src/app/entities/bank/components/bank-table/bank-table.component.html
@@ -1,6 +1,6 @@
 <table class="table table-light table-striped table-hover p-4" *ngIf="!!banks">
   <thead>
-  <tr class="table-dark">
+  <tr class="table-header">
     <th scope="col">{{'bank.name' | translate}}</th>
     <th scope="col">{{'bank.address' | translate}}</th>
     <th scope="col">{{'bank.details' | translate}}</th>
