--- a/src/app/entities/client/client.component.html
+++ b/src/app/entities/client/client.component.html
@@ -1,4 +1,4 @@
-<div class="page">
+<div class="page background">
   <h1 class="mb-4">{{'client.header' | translate}}</h1>
   <button class="mb-2" mat-raised-button color="primary"
           (click)="updateClient()">
