--- a/src/app/entities/client/components/client-table/client-table.component.html
+++ b/src/app/entities/client/components/client-table/client-table.component.html
@@ -1,6 +1,6 @@
 <table class="table table-light table-striped table-hover p-4" *ngIf="!!clients">
   <thead>
-  <tr class="table-dark">
+  <tr class="table-header">
     <th scope="col">{{'client.name' | translate}}</th>
     <th scope="col">{{'client.address' | translate}}</th>
     <th scope="col">{{'client.pesel' | translate}}</th>
