--- a/src/app/entities/login/login.component.html
+++ b/src/app/entities/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="h-100 login-background">
-  <form class="w-50 h-100 opacity-100" *ngIf="!isLoggedIn; else loggedIn">
+  <form class="w-50 h-100" *ngIf="!isLoggedIn; else loggedIn">
     <div class="login-container">
       <mat-toolbar class="login-toolbar" color="primary">{{'login.logg-header' | translate}}</mat-toolbar>
       <mat-card class="p-3">
